en/1.0.0/guide/dashboard/index.md
---
layout: post
---

Dashboard
========= 

What is it ?
------------

The [dashboard](http://apisense.io/) is the main interface to all data collectors. Using it you will be able to:
	
* Customize your profile settings
* Create your own collects
* Retrieve and analyze fresh data

How to use it ?
---------------

1. __Sign up__:
First of all you have to create an account. Some personal information like your username will be linked to your collects and shown in our store. Choose it wisely !

2. __Create a collect__:
Then you have to create a collect and set its name, description and optionaly your website. Those information will be used in our store to explain what you are planning to do with this collect. Again these are really important and must be filled carefully.

3. __Code it__:
Last crutial step, you have to write your collect using our documentation. It should be quite easy and user friendly but if you're in trouble, you can contact us at [contact@apisense.com](contact@apisense.com)

4. __Publish it__:
First of all you have to create an account. Some personal information like your username will be linked to your collects and shown in our store. Choose it wisely !