en/1.2.0/guide/dashboard/index.md
---
layout: post
---

Dashboard
========= 

What is it ?
------------

The [dashboard](http://apisense.io/) is the main interface to all data collectors. Using it you will be able to:
	
* Customize your profile settings
* Create your own collects
* Retrieve and analyze fresh data

How to use it ?
---------------

1. __Sign up__:
First of all you have to create an account. Some personal information like your username will be linked to your collects and shown in our store. Choose it wisely !

2. __Create a collect__:
Then you have to create a collect and set its name, description and optionaly your website. Those information will be used in our store to explain what you are planning to do with this collect. Again these are really important and must be filled carefully.

	<div class="alert alert-warning" role="alert">WARN: By default your collect is private so people won't be able to see it until you finish to write it. Remember to set it visible once it's ready!</div>

3. __Code it__:
Last crutial step, you have to write your collect using our documentation. It should be quite easy and user friendly but if you're in trouble, you can contact us at [contact@apisense.com](contact@apisense.com)

4. __Publish it__:
First of all you have to create an account. Some personal information like your username will be linked to your collects and shown in our store. Choose it wisely !

Create private collects
-----------------------

If you want to create collect only accessible by your community, you will need to let it private __and__ create your own application using your private access key. Doing so, people with your application will be able to see it in the store !
Open your profile settings and copy the key inside _Read only API Key_. See [how to use it here](../sdk)